Mantiene compatibilidad con Android 6